--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
     batch:
         job:
-            names: ${job.name:chunkProcessingJob}
+            names: ${job.name:itemWriterJob}
     datasource:
         driver-class-name: org.h2.Driver
     sql:
