--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,10 +1,14 @@
 spring:
     datasource:
         hikari:
-            jdbc-url: jdbc:mysql://127.0.0.1:3306/spring_batch?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+            jdbc-url: jdbc:mysql://127.0.0.1:3306/spring_batch?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&rewriteBatchedStatements=true
             driver-class-name: com.mysql.cj.jdbc.Driver
             username: root
             password: 1111
+    jpa:
+        hibernate:
+            ddl-auto: update
+        show-sql: true
     batch:
         jdbc:
             initialize-schema: never
