--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -7,8 +7,8 @@ spring:
             password: 1111
     jpa:
         hibernate:
-            ddl-auto: update
+            ddl-auto: none
         show-sql: true
     batch:
         jdbc:
-            initialize-schema: never
+            initialize-schema: always
