--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
         hikari:
-            jdbc-url: jdbc:mysql://127.0.0.1:3306/spring_batch?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&rewriteBatchedStatements=true
+            jdbc-url: jdbc:mysql://127.0.0.1:3306/pass_batch?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&rewriteBatchedStatements=true
             driver-class-name: com.mysql.cj.jdbc.Driver
             username: root
             password: 1111
@@ -12,3 +12,7 @@ spring:
     batch:
         jdbc:
             initialize-schema: always
+
+logging:
+    level:
+        org.hibernate.type.descriptor.sql: debug
