--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,3 +1,6 @@
+server:
+    port: 8081
+
 spring:
     datasource:
         hikari:
@@ -10,6 +13,8 @@ spring:
             ddl-auto: none
         show-sql: true
     batch:
+        job:
+            enabled: false
         jdbc:
             initialize-schema: always
 
