--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,17 @@
+server:
+    port: 8081
+
 spring:
     batch:
         job:
-            names: ${job.name:itemWriterJob}
+#            names: ${job.name:itemWriterJob}
+            names: ${job.name:NONE}
     datasource:
         driver-class-name: org.h2.Driver
     sql:
         init:
             data-locations: classpath:person.sql
+    jpa:
+        hibernate:
+            ddl-auto: create
+        show-sql: true
