Job 배치 실행 수정

--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -14,7 +14,7 @@ spring:
         show-sql: true
     batch:
         job:
-            enabled: false
+            names: ${job.name:helloJob}
         jdbc:
             initialize-schema: always
 
