왜 안되는지 모르겠는데 설정

--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -14,7 +14,7 @@ spring:
         show-sql: true
     batch:
         job:
-            names: ${job.name:helloJob}
+            names: ${job.name:NONE}
         jdbc:
             initialize-schema: always
 
